@@ -1,5 +1,6 @@
 import { createApp } from "vue";
 import MapVue from "../packages";
+import "mapbox-gl/dist/mapbox-gl.css";
 // import MapVue from "../dist/mapvue";
 // import "../dist/style.css";
 import App from "./App.vue";
