@@ -58,34 +58,34 @@ const MapVue = {
   },
 };
 
-export {
-  VMap,
-  VFillLayer,
-  VFillExtrusionLayer,
-  VLineLayer,
-  VCircleLayer,
-  VRasterLayer,
-  VBackgroundLayer,
-  VHeatmapLayer,
-  VHillshadeLayer,
-  VSymbolLayer,
-  VSkyLayer,
-  VGeoSource,
-  VRasterSource,
-  VRasterDemSource,
-  VImageSource,
-  VVideoSource,
-  VVectorSource,
-  VCanvasSource,
-  VSprite,
-  VMarker,
-  VPopup,
-  VFog,
-  VFeatureState,
-  VAttributionControl,
-  VNavigationControl,
-  VScaleControl,
-  mapvueSymbol,
-};
+// export {
+//   VMap,
+//   VFillLayer,
+//   VFillExtrusionLayer,
+//   VLineLayer,
+//   VCircleLayer,
+//   VRasterLayer,
+//   VBackgroundLayer,
+//   VHeatmapLayer,
+//   VHillshadeLayer,
+//   VSymbolLayer,
+//   VSkyLayer,
+//   VGeoSource,
+//   VRasterSource,
+//   VRasterDemSource,
+//   VImageSource,
+//   VVideoSource,
+//   VVectorSource,
+//   VCanvasSource,
+//   VSprite,
+//   VMarker,
+//   VPopup,
+//   VFog,
+//   VFeatureState,
+//   VAttributionControl,
+//   VNavigationControl,
+//   VScaleControl,
+//   mapvueSymbol,
+// };
 
 export default MapVue;
